<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            app:icon="@drawable/light_mode"
            app:iconGravity="textStart"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/search"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="15sp"
                android:layout_marginVertical="7sp"
                android:layout_weight="1"
                android:padding="20dp"
                android:textAllCaps="false"
                android:text="@string/search"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="25dp"
                app:icon="@drawable/light_mode2"
                app:iconPadding="10dp"
                app:iconGravity="textStart"
                app:iconTint="@color/black"
                />

            <Button
                android:id="@+id/media"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="15sp"
                android:layout_marginVertical="7sp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:rotationX="0"
                android:textAllCaps="false"
                android:text="@string/media_library"
                android:textColor="@color/black"
                app:iconGravity="textStart"
                android:textSize="20sp"
                app:icon="@drawable/light_mode"
                app:iconPadding="10dp"
                app:iconTint="@color/black"
                app:cornerRadius="25dp"/>

            <Button
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="15sp"
                android:layout_marginTop="7sp"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/settings"
                android:textColor="@color/black"
                app:cornerRadius="25dp"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:icon="@drawable/light_mode3"
                app:iconPadding="10dp"
                app:iconGravity="textStart"
                app:iconTint="@color/black"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
